# job-scout-agent

./: .gitignore  Makefile  README.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  env.py  main.py  models.py  scheduler.py  schemas.py
backend/app/prompts/: analyze.json  cover_letter.md
backend/app/routers/: analyze.py  chat.py  cover_letters.py  harvest.py  jobs.py  llm.py  parse_resume.py
backend/app/scrapers/: ashby.py  base.py  greenhouse.py  http.py  lever.py  workday.py
backend/app/services/: analyzer.py  cleanup.py  cover_letter.py  dedupe.py  embeddings.py  groq_client.py  harvest.py  jobs.py  llm_groq.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_analyze.py  test_api.py
crawler/: Dockerfile  pyproject.toml
crawler/jobcrawler/: items.py  middlewares.py  pipelines.py  settings.py
crawler/jobcrawler/exporters/: rest_sink.py
crawler/jobcrawler/spiders/: greenhouse_spider.py  lever_spider.py
infra/: init_db.sql
web/: next.config.mjs  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/api/chat/: route.ts
web/app/api/chat/ask/: route.ts
web/app/api/harvest/run/: route.ts
web/app/harvest/: page.tsx
web/app/job/[id]/: page.tsx
web/components/: AnalysisPanel.tsx  CleanupButton.tsx  CoverLetterPanel.tsx  Filters.tsx  FitPanel.tsx  JobCard.tsx  JobChat.tsx  JobList.tsx  LetterEditor.tsx  ResumeUpload.tsx  ScrapeButton.tsx  SkeletonCard.tsx
web/lib/: api.ts  html.ts  time.ts
web/types/: mammoth-browser.d.ts
(+2 files in other folders)
