[project]\nname = \"job-scout-backend\"\nversion = \"0.1.0\"\ndependencies = [\n  \"fastapi>=0.115\",\n  \"uvicorn[standard]\",\n  \"pydantic>=2\",\n  \"SQLAlchemy>=2.0\",\n  \"psycopg[binary]\",\n  \"alembic\",\n  \"groq\",\n  \"celery[redis]\",\n  \"python-simhash\",\n  \"pgvector\",\n  \"httpx\",\n  \"orjson\",\n  \"prometheus-client\",\n  \"structlog\",\n  \"python-dotenv\",\n]\n\n[tool.black]\nline-length = 100\n\n[tool.ruff]\nline-length = 100\nselect = [\"E\",\"F\",\"I\",\"B\",\"UP\"]